add login and logout endpoints

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,3 +29,15 @@ spring.data.mongodb.uri=mongodb+srv://haumea:cmpt3732021@cmpt373-project.unzqm.m
 server.port=8080
 spring.application.name=GitAnalyzer
 spring.mvc.format.date-time=iso
+
+#sfu sso
+# https://cas.sfu.ca/cas/login?service=http://localhost:8080
+# https://cas.sfu.ca/cas/serviceValidate?service=http://localhost:8080&ticket=[value send back by CAS]
+cas.server-url-prefix=https://cas.sfu.ca/cas
+cas.server-login-url=https://cas.sfu.ca/cas/login
+cas.client-host-url=http://localhost:8080
+cas.validation-type=CAS3
+cas.single-logout.enabled=true
+
+#Store JSESSIONID in cookie, not URL
+server.servlet.session.tracking-modes=cookie
