--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,12 @@ dependencies {
 //	implementation 'javax.validation:validation-api:2.0.1.Final'
 //	implementation 'org.hibernate.validator:hibernate-validator:7.0.0.Final'
 
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.security:spring-security-cas'
+	compile 'org.jasig.cas.client:cas-client-support-springboot:3.6.2'
+//	compile 'com.kakawait:cas-security-spring-boot-starter:1.0.6'
+	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
+
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
